--- a/src/components/Queue/Queue.css
+++ b/src/components/Queue/Queue.css
@@ -15,3 +15,9 @@
   max-height: 36.8rem;
   box-shadow: 1px 1px 5px rgba(255, 255, 255, 0.253);
 }
+
+@media screen and (min-width: 768px) {
+  .queue__list {
+    max-height: 36.7rem;
+  }
+}
