--- a/src/components/Search/SearchResults.css
+++ b/src/components/Search/SearchResults.css
@@ -30,7 +30,7 @@
 .songs-container {
   padding: 0.5rem;
   overflow-y: auto;
-  max-height: 40rem;
+  max-height: 50rem;
   display: flex;
   flex-direction: column;
 
@@ -38,5 +38,24 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
+  }
+
+  .results__links {
+    display: flex;
+    transition: color 0.2s ease-in-out;
+
+    .results__link {
+      &:hover {
+        color: var(--accent-color);
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .nav-bar {
+    max-height: 40rem;
   }
 }
