--- a/src/components/Queue/Queue.css
+++ b/src/components/Queue/Queue.css
@@ -1,3 +1,10 @@
+.queue {
+  display: flex;
+  flex-direction: column;
+  
+  height: 100%;
+}
+
 .queue__title {
   font-size: 1.5em;
   font-weight: bold;
@@ -12,12 +19,19 @@
   margin-right: 1rem;
   border-radius: 5px;
   overflow-y: auto;
-  max-height: 36.8rem;
+  max-height: 36.5rem;
   box-shadow: 1px 1px 5px rgba(255, 255, 255, 0.253);
+  margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1580px) {
   .queue__list {
-    max-height: 36.7rem;
+    max-height: 49.6rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .queue {
+    display: none;
   }
 }
