--- a/src/components/Search/SearchBar.css
+++ b/src/components/Search/SearchBar.css
@@ -2,15 +2,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  max-width: 700px;
+  width: 700px;
+  max-width: 100%;
   margin-left: 10rem;
+  @media screen and (max-width: 480px) {
+    margin-left: 1rem;
+  }
 }
 
 .search-bar__input-container {
   position: relative;
   border: 5px;
-  box-shadow: 1px 1px 4px rgba(255, 255, 255, 0.237) ;
+  box-shadow: 1px 1px 4px rgba(255, 255, 255, 0.237);
   width: 100%;
 }
 
@@ -24,7 +27,7 @@
 
 .search-bar__input {
   width: 100%;
-  padding: 0.5rem 0.5rem 0.5rem 2rem; 
+  padding: 0.5rem 0.5rem 0.5rem 2rem;
   font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -38,4 +41,3 @@
 .search-bar__input::placeholder {
   color: #ccc;
 }
-
