--- a/src/components/Song/SongItem.css
+++ b/src/components/Song/SongItem.css
@@ -18,16 +18,20 @@
     gap: 0.5rem;
   }
 
+  .song__title {
+    font-weight: bold;
+  }
+
   .song__img-container {
     width: 50px;
     height: 50px;
     border-radius: 5px;
-    border: 1px solid white;
   }
 
   .song__img {
     width: 100%;
     height: 100%;
+    border-radius: 5px;
   }
 
   .song__description {
@@ -86,7 +90,7 @@
   .song__author {
     font-size: 0.8em;
     &:before {
-      content: "Artist: ";
+      content: "Author: ";
     }
   }
 
@@ -109,7 +113,6 @@
     width: 100%;
     height: 100%;
     border-radius: 5px;
-    border: 1px solid white;
   }
 
   .song__img {
@@ -134,5 +137,27 @@
   }
   .song__button-icon {
     font-size: 1.5em;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .song {
+    box-shadow: none;
+    padding: 0;
+
+    .song__title {
+      font-size: 0.8em;
+    }
+    .song__author {
+      font-size: 0.6em;
+      &:before {
+        content: "Author: ";
+        font-weight: 600;
+      }
+    }
+
+    .song__buttons {
+      display: none;
+    }
   }
 }
