--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --primary-color: #1b1f3b;
-  --secondary-color: #4b79a1;
+  --secondary-color: #131639;
   --accent-color: #ffab76;
   --background-color: #333645;
   --text-primary-color: #ffffff;
