--- a/src/components/Playlist/PlaylistItem.css
+++ b/src/components/Playlist/PlaylistItem.css
@@ -72,15 +72,103 @@
   .add-btn {
     position: absolute;
     bottom: 0;
-    right: 0;
+    right: 0.5rem;
+    cursor: pointer;
+
     .add-btn__icon {
       font-size: 2.5rem;
       transition: all 0.1s ease-in;
-
-      :hover {
-        transform: scale(1.1);
-        color: var(--accent-color);
-      }
     }
+
+    :hover {
+      color: var(--accent-color);
+    }
+
+    &:hover .add-btn__span {
+      display: block;
+    }
+
+    .add-btn__span {
+      display: none;
+      position: absolute;
+      font-size: 0.75em;
+      bottom: 80%; /* Mover el span sobre el botón */
+      left: 50%;
+      transform: translateX(-50%);
+      margin-bottom: 8px; /* Ajusta la distancia entre el span y el botón */
+      padding: 5px 10px;
+      background-color: #000; /* Fondo del label */
+      color: #fff; /* Color del texto del label */
+      border-radius: 4px;
+      white-space: nowrap; /* Evita el salto de línea */
+      z-index: 999; /* Asegura que el label esté sobre otros elementos */
+    }
+  }
+}
+
+.playlist.list {
+  margin-top: 1rem;
+  flex-direction: row;
+  align-items: start;
+  justify-content: start;
+  padding: 1rem;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px white;
+  transition: all 0.2s ease-in-out;
+
+  &:hover {
+    box-shadow: 0px 3px 5px var(--secondary-color);
+    background-color: var(--primary-color);
+    cursor: pointer;
+  }
+  .playlist__details {
+    flex-direction: row;
+    gap: 0.5rem;
+    margin-bottom: 0;
+  }
+
+  .playlist__title {
+    font-weight: bold;
+  }
+
+  .playlist__img-container {
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+  }
+
+  .playlist__img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+  }
+
+  .playlist__description {
+    display: flex;
+    gap: 1rem;
+  }
+}
+
+.playlist.list--small {
+  margin-top: 0;
+  flex-direction: row;
+  align-items: start;
+  justify-content: start;
+  padding: .5rem;
+  border-radius: 5px;
+  gap: 0;
+  box-shadow: none;
+
+  .playlist__details {
+    flex-direction: row;
+    gap: 0.5rem;
+    margin-bottom: 0;
+    font-size: 0.8em;
+  }
+
+  .playlist__img-container {
+    width: 35px;
+    height: 35px;
+    border-radius: 5px;
   }
 }
