--- a/src/components/Search/Discover.css
+++ b/src/components/Search/Discover.css
@@ -1,3 +1,6 @@
+.loading {
+}
+
 .results {
   max-height: 100%;
   width: 100%;
@@ -6,6 +9,32 @@
 
   @media screen and (max-width: 480px) {
     padding: 0.5rem;
+  }
+}
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.loading {
+  width: fit-content;
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 30px;
+  padding-bottom: 8px;
+  background: linear-gradient(currentColor 0 0) 0 100%/0% 3px no-repeat;
+  animation: l2 2s linear infinite;
+}
+
+.loading:before {
+  content: "Loading...";
+}
+
+@keyframes l2 {
+  to {
+    background-size: 100% 3px;
   }
 }
 
@@ -42,14 +71,15 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
 }
 
 .results__container {
   display: flex;
   flex-direction: column;
-  overflow: auto;
-  max-height: 35rem;
+  overflow-y: auto;
   scrollbar-width: none;
+  max-height: 35rem;
 
   .result__title {
     font-size: 1.5em;
@@ -76,7 +106,9 @@
 }
 
 .songs-container {
+  position: relatives;
   padding: 0.5rem;
+  margin-right: 0.5rem;
   display: flex;
   flex-direction: column;
   scrollbar-width: none;
@@ -95,11 +127,17 @@
 .playlists-container {
   padding: 0.5rem;
   display: grid;
-  overflow-x: scroll;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
   scrollbar-width: none;
   gap: 1rem;
+
+  &.list {
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    scrollbar-width: none;
+  }
 
   @media screen and (max-width: 480px) {
     grid-template-columns: 1fr 1fr;
