--- a/src/components/Song/SongItem.css
+++ b/src/components/Song/SongItem.css
@@ -43,6 +43,7 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    position: relative;
   }
 
   .song__button {
@@ -63,6 +64,42 @@
       transform: scale(1.2);
     }
   }
+
+  .song__options {
+    position: absolute;
+    top: 30px;
+    right: 0;
+    width: 200px;
+    background-color: var(--primary-color);
+    border: 1px solid #e0e0e0;
+    border-radius: 4px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .song__option-button {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    color: white;
+    transition: background 0.2s;
+  }
+
+  .song__option-button:hover {
+    color: var(--accent-color);
+    background-color: var(--secondary-color);
+  }
+
+  .song__option-button .song__button-icon {
+    margin-right: 10px;
+  }
 }
 
 .song.song--active {
@@ -81,6 +118,10 @@
   .song__details {
     display: flex;
     flex-direction: column;
+
+    .song__button--play {
+      display: none;
+    }
   }
 
   .song__title {
