--- a/src/App.css
+++ b/src/App.css
@@ -15,26 +15,13 @@
   }
 }
 
-.main {
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  gap: 2rem;
-  height: 100%;
-  width: 100%;
-
-  @media (max-width: 480px) {
-    grid-template-columns: 1fr;
-  }
-}
-
-.audio-player {
+.player-section {
   width: 100%;
   padding: 1rem;
   position: fixed;
   bottom: 0;
   left: 0;
   background-color: var(--primary-color);
-  box-shadow: 1px 1px 5px rgba(255, 255, 255, 0.233);
 
   @media (max-width: 480px) {
     display: none;
