--- a/src/components/Song/SongItem.css
+++ b/src/components/Song/SongItem.css
@@ -1,11 +1,9 @@
 .song {
-  margin-top: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem;
+  padding: .5rem;
   border-radius: 5px;
-  box-shadow: 1px 1px 3px white;
   transition: all 0.2s ease-in-out;
 
   &:hover {
@@ -64,42 +62,6 @@
       transform: scale(1.2);
     }
   }
-
-  .song__options {
-    position: absolute;
-    top: 30px;
-    right: 0;
-    width: 200px;
-    background-color: var(--primary-color);
-    border: 1px solid #e0e0e0;
-    border-radius: 4px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .song__option-button {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    background: none;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    text-align: left;
-    color: white;
-    transition: background 0.2s;
-  }
-
-  .song__option-button:hover {
-    color: var(--accent-color);
-    background-color: var(--secondary-color);
-  }
-
-  .song__option-button .song__button-icon {
-    margin-right: 10px;
-  }
 }
 
 .song.song--active {
@@ -114,6 +76,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  box-shadow: 1px 1px 3px rgba(255, 255, 255, 0.34);
 
   .song__details {
     display: flex;
@@ -128,10 +91,10 @@
     font-weight: bold;
   }
 
-  .song__author {
+  .song__artists {
     font-size: 0.8em;
     &:before {
-      content: "Author: ";
+      content: "Artists: ";
     }
   }
 
@@ -181,6 +144,7 @@
   }
 }
 
+
 @media screen and (max-width: 480px) {
   .song {
     box-shadow: none;
@@ -189,10 +153,10 @@
     .song__title {
       font-size: 0.8em;
     }
-    .song__author {
+    .song__artists {
       font-size: 0.6em;
       &:before {
-        content: "Author: ";
+        content: "Artists: ";
         font-weight: 600;
       }
     }
@@ -202,3 +166,5 @@
     }
   }
 }
+
+.song.--borderless
