--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -39,6 +39,14 @@
         align-items: center;
        }
     }
+    .nav-bar__link--queue{
+      display: none;
+    }
+
+    .nav-bar__link--library{
+      display: none;
+    }
+
     .addPlaylist-btn{
       display: flex;
       justify-content: center;
@@ -58,7 +66,7 @@
     overflow-y: auto;
     max-height: 100%;
     scrollbar-width: none;
-    margin-top: 1rem;
+    margin-top: -1rem;
   }
 }
 
@@ -100,9 +108,14 @@
          padding: 0;
 
          &:hover {
-           box-shadow: 0px 3px 5px rgba(255, 255, 255, 0.507);
+           color: var(--accent-color);
+           box-shadow: none;
            cursor: pointer;
          }
+         
+       }
+       .nav-bar__link--drop{
+        display: none;
        }
      }
    }
