--- a/src/components/Queue/Queue.css
+++ b/src/components/Queue/Queue.css
@@ -8,7 +8,7 @@
     align-items: center;
     gap: 1rem;
 
-    button {
+    .play-btn {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -56,6 +56,7 @@
   }
   .queue.movile {
     display: flex;
+    flex-direction: column;
 
     .queue__list {
       box-shadow: none;
